#ifndef MINE_PROXY_H
#define MINE_PROXY_H

#include <string_view>

namespace m2g {
	constexpr std::string_view objects("resource/game/MINE/Objects.json");
	constexpr std::string_view sprite_sheets("resource/game/MINE/SpriteSheets.json");
	constexpr std::string_view items("resource/game/MINE/Items.json");
	constexpr std::string_view animations("resource/game/MINE/Animations.json");
}

#endif //MINE_PROXY_H
